--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,5 @@ POSTGRES_PASSWORD=
 POSTGRES_DATABASE=
 
 # `openssl rand -base64 32`
-AUTH_SECRET=
+AUTH_SECRET=8CKOKvx2CwVQGqGU1+dNX5u+RPCQwfXlkUMk7kJYfvE=
 AUTH_URL=http://localhost:3000/api/auth
